--- a/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
@@ -12,8 +12,8 @@
                 {{ message }}
             </div>
             <div class="d-flex flex-row flex-nowrap mt-2">
-                <button class="btn btn-primary" @@click="$emit('yes')">@Localizer[nameof(Resources.Yes)]</button>
-                <button class="btn btn-danger ml-auto" @@click="$emit('no')">@Localizer[nameof(Resources.No)]</button>
+                <button class="btn btn-primary" @@click.stop.prevent="$emit('yes')">@Localizer[nameof(Resources.Yes)]</button>
+                <button class="btn btn-danger ml-auto" @@click.stop.prevent="$emit('no')">@Localizer[nameof(Resources.No)]</button>
             </div>
         </div>
     </div>
