--- a/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
@@ -45,6 +45,8 @@
     </div>
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/lib/vue/vue.js"></script>
         <script src="~/lib/vuex/vuex.js"></script>
