--- a/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
@@ -9,7 +9,7 @@
         </div>
         <div class="show-panel flex-column">
             <div class="px-1 pt-2 pb-5">
-                {{ message }}
+                <slot></slot>
             </div>
             <div class="d-flex flex-row flex-nowrap mt-2">
                 <button class="btn btn-primary" @@click.stop.prevent="$emit('yes')">@Localizer[nameof(Resources.Yes)]</button>
