person save login except for address change

--- a/hNext/hNext.WebClient/Sass/site.scss
+++ b/hNext/hNext.WebClient/Sass/site.scss
@@ -173,3 +173,8 @@ footer{
 .btn-danger:hover{
     background-image:$danger-button-hover-background;
 }
+
+/*confirmation dialog*/
+.confirmation-dialog{
+    width: 400px;
+}
