--- a/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
@@ -11,9 +11,10 @@
             <div class="px-1 pt-2 pb-5">
                 <slot></slot>
             </div>
-            <div class="d-flex flex-row flex-nowrap mt-2">
+            <div class="d-flex flex-row justify-content-end flex-nowrap mt-2">
                 <button class="btn btn-primary" @@click.stop.prevent="$emit('yes')"><slot name='yes-button'>@Localizer[nameof(Resources.Yes)]</slot></button>
-                <button class="btn btn-danger ml-auto" @@click.stop.prevent="$emit('no')"><slot name="no-button">@Localizer[nameof(Resources.No)]</slot></button>
+                <button class="btn ml-2" :class="cancelButton ? 'btn-primary' : 'btn-danger'" @@click.stop.prevent="$emit('no')"><slot name="no-button">@Localizer[nameof(Resources.No)]</slot></button>
+                <button class="btn btn-danger ml-2" v-if="cancelButton" @@click.stop.prevent="$emit('cancel')"><slot name="cancel-button">@Resources.Cancel</slot></button>
             </div>
         </div>
     </div>
