address database filler

--- a/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
@@ -31,7 +31,7 @@
             </button>
         </div>
         <div class="show-panel flex-column">
-            <div class="d-none d-md-flex flex-column">
+            <div class="d-flex flex-column">
                 <div class="d-flex flex-row">
                     <table>
                         <tr>
