--- a/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
@@ -26,7 +26,7 @@
             @Resources.AddressChanged @Resources.ChangeOrCreate?
         </confirmation-dialog>
         <div class="d-flex flex-column mb-1">
-            <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click="close">
+            <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click.stop.prevent="close">
                 <i class="fas fa-times"></i>
             </button>
         </div>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="d-flex flex-nowrap mt-2">
                     <button class="btn btn-primary" :disabled="!enabled" @@click.stop.prevent="save">@Localizer[nameof(Resources.Save)]</button>
-                    <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click="close">@Localizer[nameof(Resources.Cancel)]</button>
+                    <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click.stop.prevent="close">@Localizer[nameof(Resources.Cancel)]</button>
                 </div>
             </div>
         </div>
