--- a/hNext/hNext.WebClient/wwwroot/css/site.css
+++ b/hNext/hNext.WebClient/wwwroot/css/site.css
@@ -68,6 +68,14 @@ footer {
   max-height: 50vh;
   overflow-y: auto; }
 
+/*additional data table style*/
+.additional-data-table {
+  border-style: solid;
+  border-width: 1px;
+  height: 115px;
+  overflow-y: auto;
+  min-width: 250px; }
+
 /*modal window style*/
 .modal-window {
   border-style: solid;
